fix(ui): layout on ios safari (#130)
* fix grid layout

* fix input font size

* fix NavBar to fixed position

* fix Header to fixed position

--- a/frontend/ui/src/components/CollectionsList/CollectionsList.module.scss
+++ b/frontend/ui/src/components/CollectionsList/CollectionsList.module.scss
@@ -4,9 +4,10 @@
 .wrapper {
   width: 100%;
   flex: 1;
-  @include mixins.flex(column, flex-start, center);
-  overflow-y: scroll;
   overflow-x: hidden;
+  margin-top: var.$header-height;
+
+  @include mixins.flex(column, flex-start, center);
 
   &__header {
     width: 100%;
