--- a/frontend/ui/src/components/PlaceList/PlaceList.module.scss
+++ b/frontend/ui/src/components/PlaceList/PlaceList.module.scss
@@ -6,7 +6,6 @@ $img-height: 360px;
 .container {
   width: 100%;
   min-width: 0;
-  overflow-y: scroll;
 }
 
 .placeItem {
